# TDPS

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md
.claude/: plan.md  settings.local.json
TDPS/: .gitignore  CLAUDE.md  README.md
TDPS/agent_docs/: 00_project_brief.md  01_hardware_reference.md  02_current_progress.md  03_agent_working_notes.md
TDPS/docs/: basic_design.md  line_following.md  tuning.md  wireless_comm.md
TDPS/docs_reference/: README.md
TDPS/firmware/: CMakeLists.txt
code/line_follow_v1/: README.md
code/wireless_v1/: README.md
docs/: basic_design.md  hardware.md  line_following.md  tuning.md  wireless_comm.md
docs/testing/: baseline.md  quickstart_3min.md  report_schema.md
docs_reference/: README.md
firmware/: CMakeLists.txt
firmware/Inc/: lf_app.h  lf_config.h  lf_control.h  lf_future_hooks.h  lf_platform.h  lf_radar.h  lf_radar_uart.h  lf_sensor.h  wireless_hooks.h  wl_config.h  wl_lora.h  wl_platform.h  wl_protocol.h
firmware/Src/: lf_app.c  lf_chassis.c  lf_config.c  lf_control.c  lf_debug_monitor.c  lf_dgus_screen.c  lf_future_hooks.c  lf_platform_stm32f4_hal.c  lf_platform_stub.c  lf_radar.c  lf_radar_uart.c  lf_sensor.c  main.c  tdps_uart_callbacks.c  wireless_hooks.c  wl_app.c  wl_config.c  wl_lora.c  wl_pc_serial_main.c  wl_platform_posix_serial.c  wl_platform_stm32f4.c  wl_platform_stub.c  wl_protocol.c
firmware/common/: clamp.h
firmware/platform/: lf_port_stm32f4_hal.h  wl_port_stm32f4.h
firmware/test/: test_lf_stub.c  test_wl_stub.c
mid_reports/: README.md
notebook/: README.md  requirements.txt
radar_test_ref/: main.c  main.h  radar_test_main.c
reports/final_report/: README.md  (+2 more)
scripts/: run_line_follow_autotest.sh  run_line_follow_stability.sh
(+227 files in other folders)
